--- a/Direct3D Win32 Game1/Direct3D Win32 Game1.vcxproj.filters
+++ b/Direct3D Win32 Game1/Direct3D Win32 Game1.vcxproj.filters
@@ -34,6 +34,15 @@
     <ClInclude Include="Scene.h">
       <Filter>Header</Filter>
     </ClInclude>
+    <ClInclude Include="Shader.h">
+      <Filter>Header</Filter>
+    </ClInclude>
+    <ClInclude Include="Mesh.h">
+      <Filter>Header</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject.h">
+      <Filter>Header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp">
@@ -46,6 +55,15 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="Scene.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Shader.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Mesh.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
