따라하기 7 삼각형 그리기 완료 이제 따라하기 8 회전하는 삼각형 그리기 할 차례

--- a/Direct3D Win32 Game1/Direct3D Win32 Game1.vcxproj.filters
+++ b/Direct3D Win32 Game1/Direct3D Win32 Game1.vcxproj.filters
@@ -81,10 +81,7 @@
     </Manifest>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="VertexShader.hlsl">
-      <Filter>Shader</Filter>
-    </FxCompile>
-    <FxCompile Include="PixelShader.hlsl">
+    <FxCompile Include="Shaders.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
   </ItemGroup>
